@@ -12,4 +12,5 @@ CREATE UNIQUE INDEX _uidx_acme_account_account_url ON acme_account(account_url);
 CREATE UNIQUE INDEX _uidx_acme_authorization_authorization_url ON acme_authorization(authorization_url);
 CREATE UNIQUE INDEX _uidx_acme_challenge_challenge_url ON acme_challenge(challenge_url);
 CREATE UNIQUE INDEX _uidx_acme_order_order_url ON acme_order(order_url);
+
 COMMIT;
