@@ -4,31 +4,77 @@
 ###
 
 [app:main]
-use = egg:peter_sslers
+use = egg:peter_sslers#main
 
-pyramid.reload_templates = false
+pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
-    pyramid_tm
+    pyramid_debugtoolbar
 
-sqlalchemy.url = sqlite:///%(here)s/ssl_minnow.sqlite
+sqlalchemy.url = sqlite:///%(here)s/ssl_minnow_production.sqlite
 
-mako.directories=peter_sslers:templates
+
+# By default, the toolbar only appears for clients from IP addresses
+# '127.0.0.1' and '::1'.
+# debugtoolbar.hosts = 127.0.0.1 ::1
+debugtoolbar.exclude_prefixes = /.well-known/admin/static
+debugtoolbar.includes =
+    pyramid_formencode_classic.debugtoolbar
+    pyramid_debugtoolbar_ajax
+mako.directories=peter_sslers.web:templates
 # mako.module_directory=%(here)s/data/templates
 
-openssl_path = openssl
-openssl_path_conf = /etc/ssl/openssl.cnf
-exception_redirect = True
+#openssl_path = openssl
+#openssl_path_conf = /System/Library/OpenSSL/openssl.cnf
+openssl_path = /usr/local/bin/openssl
+openssl_path_conf = /usr/local/ssl/openssl.cnf
+exception_redirect = False
 enable_views_public = True
-enable_views_admin = False
+enable_views_admin = True
+requests.disable_ssl_warning = True
+enable_acme_flow = True
+
+# defaults to testing. you probably want the letsencrypt-v2 system
+# custom/pebble, 
+certificate_authority = letsencrypt-v2
+certificate_authority_directory = https://acme-v02.api.letsencrypt.org/directory
+# needed for ssl
+certificate_authority_testing = True
+
+certificate_authority_protocol = acme-v2
+# 'https://letsencrypt.org/documents/LE-SA-v1.0.1-July-27-2015.pdf'
+certificate_authority_agreement = None
+
+# what additional CAs should be enabled
+certificate_authorities_enable = letsencrypt-v2
+
+enable_redis = True
+redis.url =  redis://127.0.0.1:6379/9
+redis.prime_style = 1
+
+enable_nginx = True
+nginx.servers_pool = http://127.0.0.1
+nginx.userpass = peter:sslers
+nginx.servers_pool_allow_invalid = True
+nginx.timeout = 1
+
+admin_server = http://127.0.0.1:7201
+# show on instructions
+# api_host = http://127.0.0.1:7202
+
+expiring_days = 80
 
 filter-with = proxy-prefix
 
 [filter:proxy-prefix]
 use = egg:PasteDeploy#prefix
+
+###
+# wsgi server configuration
+###
 
 [server:main]
 use = egg:waitress#main
@@ -50,11 +96,11 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = INFO
 handlers = console
 
 [logger_peter_sslers]
-level = WARN
+level = INFO
 handlers =
 qualname = peter_sslers
 
