@@ -39,6 +39,10 @@
 			This is likely handled by the AcmeEvents log and may be removed in the future
 		Added a 'deduplication' routine to AcmeAccounts.
 			It is possible we try to register a new account with information already known to the acme server. In this situation, the "new" account key we submitted should be merged onto the existing acme account.
+	Display/Faceting of AcmeOrder by active/pending status is improved
+	Order "mark invalid" button was not a form
+	Added route to sync all pending orders
+	
 	+ other fixes and improvements
 			
 
